welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:8: error: java.awt.Color does not take parameters
	if (Color.green()){
                       ^SlugTracking:9: error: type mismatch;
 found   : Unit
 required: Boolean
		avance()
                      ^SlugTracking:11: error: type mismatch;
 found   : Unit
 required: Boolean
		recule()
                      ^