welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    if (estFaceMur()){
		return false
	}
	avance()
	getCouleurSol()
	if (Color.green()){
		avance()
	}else{
		recule()
	}
}        

 

	
